Added eraseText function for the C button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="heading">Calculator</div>
     <div class="container">
-        <div class="screen">....</div>
+        <div  id="screen" class="screen" >....</div>
         <div class="pad">
             <div class="numPad">
                 <button class="num 7">7</button>
@@ -30,7 +30,7 @@
                 <button class="operator *">*</button>
                 <button class="operator /">/</button>
                 <button class="operator =">=</button>
-                <button class="clear">C</button>
+                <button class="clear" onclick="javascript:eraseText();">C</button>
             </div>
         </div>
     </div>
