--- a/index.html
+++ b/index.html
@@ -3,33 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <title>Calculator</title>
 </head>
 <body>
     <div class="heading">Calculator</div>
     <div class="container">
-        <div  id="screen" class="screen" >....</div>
+        <div  id="screen" class="screen" >...</div>
         <div class="pad">
             <div class="numPad">
-                <button class="num 7">7</button>
-                <button class="num 8">8</button>
-                <button class="num 9">9</button>
-                <button class="num 4">4</button>
-                <button class="num 5">5</button>
-                <button class="num 6">6</button>
-                <button class="num 1">1</button>
-                <button class="num 2">2</button>
-                <button class="num 3">3</button>
-                <button class="num 0">0</button>
+                <button class="num" data-number="7">7</button>
+                <button class="num" data-number="8">8</button>
+                <button class="num" data-number="9">9</button>
+                <button class="num" data-number="4">4</button>
+                <button class="num" data-number="5">5</button>
+                <button class="num" data-number="6">6</button>
+                <button class="num" data-number="1">1</button>
+                <button class="num" data-number="2">2</button>
+                <button class="num" data-number="3">3</button>
+                <button class="num" data-number="0">0</button>
             </div>
             <div class="operatorPad">
-                <button class="operator +">+</button>
-                <button class="operator -">-</button>
-                <button class="operator *">*</button>
-                <button class="operator /">/</button>
-                <button class="operator =">=</button>
+                <button class="operator" data-operator="+">+</button>
+                <button class="operator" data-operator="-">-</button>
+                <button class="operator" data-operator="*">*</button>
+                <button class="operator" data-operator="/">/</button>
+                <button class="operator" data-operator="=">=</button>
                 <button class="clear" onclick="javascript:eraseText();">C</button>
             </div>
         </div>
