Added ID to result button

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <button class="operator" data-operator="-">-</button>
                 <button class="operator" data-operator="*">*</button>
                 <button class="operator" data-operator="/">/</button>
-                <button class="result" onclick="javascript:operate();">=</button>
+                <button id ="result" class="result">=</button>
                 <button class="clear" onclick="javascript:eraseText();">C</button>
             </div>
         </div>
